<package format="2">
	<name>holonomic_3wheels_driver</name>
	<version>1.0.0</version>
	<description>
		The holonomic_3wheels_driver package
	</description>

	<maintainer email="its@a.me">mario</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>roscpp</depend>
	<depend>geometry_msgs</depend>
</package>
